2006-06-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: use macros in an attempt to make
	the key grabbing code more readable.

2006-06-29  Sven Neumann  <sven@gimp.org>

	* app/display/Makefile.am
	* app/display/gimpdisplayshell-progress.[ch]: new files,
	implementing the GimpProgress interface by delegation to
	GimpStatusbar.

	* app/display/gimpdisplayshell.c (G_DEFINE_TYPE): call
	gimp_display_shell_progress_iface_init().

	* app/display/gimpdisplay.c: delegate progress calls to
	GimpDisplayShell instead of shell->statusbar.
	
2006-06-29  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/screenshot.c (select_window_x11): allow the
	usage of Escape together with CapsLock, NumLock and ScrollLock.

2006-06-29  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/screenshot.c (select_window_x11): use 0 instead
	of AnyModifer in the call to XGrabKey.  This prevented the
	cancellation of the screenshot with Escape in some environments.

2006-06-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: added an else that we lost somehow.

2006-06-28  Sven Neumann  <sven@gimp.org>

	* app/gui/splash.c: improved calculation of text color based on
	the splash image (bug #165760).

2006-06-28  Sven Neumann  <sven@gimp.org>

	* app/menus/plug-in-menus.c (plug_in_menus_setup): generate unique
	keys so that two procedures can be installed to the same menu entry.
	Addresses bug #346001.

2006-06-28  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h: fixed typo spotted by Jakub Friedl.

2006-06-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c
	* plug-ins/common/screenshot.c: updated inlined icons from Tango
	Icon library.

2006-06-28  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpfontselectbutton.[ch]
	* libgimp/gimpgradientselectbutton.[ch]
	* libgimp/gimppaletteselectbutton.[ch]
	* libgimp/gimppatternselectbutton.[ch]: for consistency with
	GimpBrushSelectButton dropped the _name suffix from the getter