@@ -23,6 +23,8 @@
 #include <libgimp/gimp.h>
 #include <libgimp/gimpui.h>
 
+#include <glib/gstdio.h>
+
 #include "print.h"
 #include "print-settings.h"
 #include "print-page-layout.h"
@@ -64,6 +66,12 @@ static GtkWidget * create_custom_widget (GtkPrintOperation *operation,
 static void        custom_widget_apply  (GtkPrintOperation *operation,
                                          GtkWidget         *widget,
                                          gpointer           user_data);
+
+static gboolean    print_preview        (GtkPrintOperation        *operation,
+                                         GtkPrintOperationPreview *preview,
+                                         GtkPrintContext          *context,
+                                         GtkWindow                *parent,
+                                         gpointer                  user_data);
 
 const GimpPlugInInfo PLUG_IN_INFO =
 {
@@ -178,6 +186,8 @@ print_image (gint32    image_ID,
                         G_CALLBACK (create_custom_widget),   data);
       g_signal_connect (operation, "custom-widget-apply",
                         G_CALLBACK (custom_widget_apply),   data);
+      g_signal_connect (operation, "preview",
+                        G_CALLBACK (print_preview),   data);
 
       gtk_print_operation_set_custom_tab_label (operation, _("Layout"));
 
@@ -185,7 +195,8 @@ print_image (gint32    image_ID,
                                      GTK_PRINT_OPERATION_ACTION_PRINT_DIALOG,
                                      NULL, &error);
 
-      if (res == GTK_PRINT_OPERATION_RESULT_APPLY)
+      if (res == GTK_PRINT_OPERATION_RESULT_APPLY ||
+          res == GTK_PRINT_OPERATION_RESULT_IN_PROGRESS)
         {
           save_print_settings (data);
         }
@@ -278,3 +289,107 @@ custom_widget_apply (GtkPrintOperation *operation,
       gimp_image_undo_group_end (data->image_id);
     }
 }
+
+
+#define PREVIEW_SCALE 72
+
+static gboolean
+print_preview (GtkPrintOperation        *operation,
+               GtkPrintOperationPreview *preview,
+               GtkPrintContext          *context,
+               GtkWindow                *parent,
+               gpointer                  user_data)
+{
+  PrintData       *data       = user_data;
+  GtkPageSetup    *page_setup = gtk_print_context_get_page_setup (context);
+  GtkPaperSize    *paper_size;
+  gdouble          paper_width;
+  gdouble          paper_height;
+  gdouble          top_margin;
+  gdouble          bottom_margin;
+  gdouble          left_margin;
+  gdouble          right_margin;
+  gint             preview_width;
+  gint             preview_height;
+  cairo_t         *cr;
+  cairo_surface_t *surface;
+  GtkPageOrientation orientation;
+
+  paper_size      = gtk_page_setup_get_paper_size    (page_setup);
+  paper_width     = gtk_paper_size_get_width         (paper_size, GTK_UNIT_INCH);
+  paper_height    = gtk_paper_size_get_height        (paper_size,  GTK_UNIT_INCH);
+  top_margin      = gtk_page_setup_get_top_margin    (page_setup, GTK_UNIT_INCH);
+  bottom_margin   = gtk_page_setup_get_bottom_margin (page_setup, GTK_UNIT_INCH);
+  left_margin     = gtk_page_setup_get_left_margin   (page_setup, GTK_UNIT_INCH);
+  right_margin    = gtk_page_setup_get_right_margin  (page_setup, GTK_UNIT_INCH);
+
+  /* the print context does not have the page orientation, it is transformed */
+  orientation     = data->orientation;
+
+  if (orientation == GTK_PAGE_ORIENTATION_PORTRAIT ||
+      orientation == GTK_PAGE_ORIENTATION_REVERSE_PORTRAIT)
+    {
+      preview_width  = PREVIEW_SCALE * paper_width;
+      preview_height = PREVIEW_SCALE * paper_height;
+    }
+  else
+    {
+      preview_width  = PREVIEW_SCALE * paper_height;
+      preview_height = PREVIEW_SCALE * paper_width;
+    }
+
+      surface = cairo_image_surface_create (CAIRO_FORMAT_RGB24,
+                                            preview_width, preview_height);
+
+  if (CAIRO_STATUS_SUCCESS != cairo_surface_status (surface))
+    {
+      g_message ("Unable to create preview (not enough memory?)");
+      return TRUE;
+    }
+
+
+  cr = cairo_create (surface);
+  gtk_print_context_set_cairo_context (context, cr, PREVIEW_SCALE, PREVIEW_SCALE);
+
+  /* fill page with white */
+  cairo_set_source_rgb (cr, 1, 1, 1);
+  cairo_new_path (cr);
+  cairo_rectangle (cr, 0, 0, preview_width, preview_height);
+  cairo_fill (cr);
+
+  cairo_translate (cr, left_margin * PREVIEW_SCALE, right_margin * PREVIEW_SCALE);
+
+  if (draw_page_cairo (context, data))
+    {
+      cairo_status_t   status;
+      gchar           *fname;
+
+      fname = gimp_temp_name ("png");
+      status = cairo_surface_write_to_png (surface, fname);
+      cairo_destroy (cr);
+      cairo_surface_destroy (surface);
+
+      if (status == CAIRO_STATUS_SUCCESS)
+        {
+          GtkWidget *dialog;
+          GtkWidget *image;
+
+          dialog = gtk_dialog_new ();
+          gtk_window_set_title (GTK_WINDOW (dialog), _("Print Preview"));
+          image = gtk_image_new_from_file (fname);
+
+          g_unlink (fname);
+          g_free (fname);
+
+          gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox), image, FALSE, FALSE, 0);
+          gtk_widget_show (image);
+
+          gtk_dialog_run (GTK_DIALOG (dialog));
+
+          gtk_widget_destroy (dialog);
+        }
+    }
+
+  return TRUE;
+}
+
